Hide specific particle nodes in AR_anime1.html
Add conditions to hide specific particle nodes.

--- a/AR_anime1.html
+++ b/AR_anime1.html
@@ -15,6 +15,9 @@
       // 含まれていたら非表示にする
       const nodeName = node.name.toLowerCase();
       if (
+        nodeName.includes('particles_0')
+        nodeName.includes('particles_1')
+        nodeName.includes('particles_2')
         nodeName.includes('ocean')
       ) {
         node.visible = false; // 表示をオフにする
