Update visibility condition for ocean particles

--- a/AR_anime1.html
+++ b/AR_anime1.html
@@ -18,7 +18,7 @@
         nodeName.includes('particles_0')||
         nodeName.includes('particles_1')||
         nodeName.includes('particles_2')||
-        nodeName.includes('ocean')
+        nodeName.includes('ocean_0')
       ) {
         node.visible = false; // 表示をオフにする
       }
