Replace shark model asset with peachy balloon gift

--- a/AR_anime1.html
+++ b/AR_anime1.html
@@ -35,7 +35,7 @@
       vr-mode-ui="enabled: false">
       
       <a-assets>
-        <a-asset-item id="shark-model" src="./whale_shark_fantasy.glb"></a-asset-item>
+        <a-asset-item id="shark-model" src="./peachy_balloon_gift.glb"></a-asset-item>
         
         <audio id="pass-sound" src="./ambient_ocean.mp3" preload="auto"></audio>
 
