Update animation properties for balloon model

--- a/AR_anime1.html
+++ b/AR_anime1.html
@@ -56,8 +56,9 @@
         gltf-model="#balloon-model" 
         scale="3 3 3" 
         position="5 22 -150"
-        animation__pos="from: 5 22 -150; to: 5 22 300; delay: 8000">
-      </a-entity>
+        animation="property: position; from: 5 20 -150; to: 5 20 300; dur: 35000; easing: linear; loop: true; delay: 8000"
+        rotation="0 0 0">
+    </a-entity>
             
       <a-camera gps-camera rotation-reader></a-camera>
     </a-scene>
