--- a/AR_anime1.html
+++ b/AR_anime1.html
@@ -56,7 +56,7 @@
         gltf-model="#balloon-model" 
         scale="0.05 0.05 0.05"
         position="5 22 -150"
-        animation="property: position; from: 5 20 -150; to: 5 20 300; dur: 35000; easing: linear; loop: true; delay: 8000"
+        Animation="property: position; from: 5 20 -500; to: 5 20 500; dur: 40000; easing: linear; loop: true; delay: 8000"
         rotation="0 0 0">
     </a-entity>
             
