Include gestures.js for enhanced AR features
Added external gestures.js script for AR functionality.

--- a/AR_anime1.html
+++ b/AR_anime1.html
@@ -25,7 +25,9 @@
     });
     console.log("余計なパーツを非表示にしました");
   });
-</script>
+    </script>
+    
+    <script src="https://raw.githack.com/fcor/arjs-gestures/master/dist/gestures.js"></script>
   </head>
 
   <body style="margin: 0; overflow: hidden;">
