--- a/AR_anime1.html
+++ b/AR_anime1.html
@@ -34,7 +34,8 @@
     <a-scene 
       embedded 
       arjs="sourceType: webcam; debugUIEnabled: false;" 
-      vr-mode-ui="enabled: false">
+      vr-mode-ui="enabled: false"
+      gesture-detector>
       
       <a-assets>
         <a-asset-item id="shark-model" src="./whale_shark.glb"></a-asset-item>
@@ -50,6 +51,8 @@
         gltf-model="#shark-model" 
         scale="5 5 5" 
         rotation="0 180 0"
+        class="clickable"
+        gesture-handler="minScale: 0.0001; maxScale: 10"
         animation__pos="delay: 0">
       </a-entity>
       
@@ -58,6 +61,8 @@
         gltf-model="#balloon-model" 
         scale="0.05 0.05 0.05"
         position="5 22 -150"
+        class="clickable"
+        gesture-handler="minScale: 0.0001; maxScale: 10"
         Animation="property: position; from: 5 20 -500; to: 5 20 500; dur: 40000; easing: linear; loop: true; delay: 8000"
         rotation="0 0 0">
     </a-entity>
