Update balloon model source to version 1

--- a/AR_anime1.html
+++ b/AR_anime1.html
@@ -39,7 +39,7 @@
       
       <a-assets>
         <a-asset-item id="shark-model" src="./whale_shark.glb"></a-asset-item>
-        <a-asset-item id="balloon-model" src="./peachy_balloon_gift.glb"></a-asset-item>
+        <a-asset-item id="balloon-model" src="./peachy_balloon_gift-v1.glb"></a-asset-item>
       
         <a-mixin id="move-logic" 
           animation__pos="property: position; from: 0 20 -150; to: 0 20 300; dur: 35000; easing: linear; loop: true">
