--- a/AR_anime1.html
+++ b/AR_anime1.html
@@ -28,9 +28,13 @@
       id="shark"
       gltf-model="#shark-model" 
       class="clickable"
-      scale="1 1 1" 
-      gesture-handler="minScale: 0.0001; maxScale: 10"
-      animation="property: position; from: -10 25 -200; to: -10 25 300; dur: 45000; easing: linear; loop: true">
+      scale="0.03 0.03 0.03"  gesture-handler="minScale: 0.0001; maxScale: 10"
+      animation="property: position; 
+                 from: -15 30 -250; 
+                 to: -15 30 350; 
+                 dur: 70000;      
+                　easing: linear; 
+                 loop: true">
     </a-entity>
     
     <a-entity 
@@ -40,7 +44,13 @@
       scale="0.01 0.01 0.01" 
       gesture-handler="minScale: 0.0001; maxScale: 1"
       position="10 20 -200"
-      animation="property: position; from: 10 20 -200; to: 10 20 300; dur: 55000; easing: linear; loop: true; delay: 10000">
+      animation="property: position; 
+                 from: 10 20 -200; 
+                 to: 10 20 350; 
+                 dur: 50000;      
+                　easing: linear; 
+                 loop: true; 
+                 delay: 5000">    
     </a-entity>
             
       <a-camera gps-camera rotation-reader></a-camera>
