Update shark model asset in AR_anime1.html

--- a/AR_anime1.html
+++ b/AR_anime1.html
@@ -16,7 +16,7 @@
       gesture-detector>
       
       <a-assets>
-        <a-asset-item id="shark-model" src="./minimalistic_fantasy_dragon-v1.glb"></a-asset-item>
+        <a-asset-item id="shark-model" src="./whale_shark_fantasy.glb"></a-asset-item>
         <a-asset-item id="balloon-model" src="./peachy_balloon_gift-v1.glb"></a-asset-item>
       
         <a-mixin id="move-logic"
