--- a/AR_anime1.html
+++ b/AR_anime1.html
@@ -6,6 +6,7 @@
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
     <script src="https://raw.githack.com/fcor/arjs-gestures/master/dist/gestures.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
 </head>
 
 <body style="margin: 0; overflow: hidden;">
@@ -24,7 +25,13 @@
         </a-mixin>
       </a-assets>
       
-    <a-entity 
+    <a-entity
+    　embedded 
+      arjs="sourceType: webcam; debugUIEnabled: false;" 
+      vr-mode-ui="enabled: false"
+      gesture-detector
+      raycaster="objects: .clickable"
+      cursor="fuse: false; rayOrigin: mouse"> <a-entity
       id="shark"
       gltf-model="#shark-model" 
       class="clickable"
