--- a/AR_anime1.html
+++ b/AR_anime1.html
@@ -31,12 +31,15 @@
       vr-mode-ui="enabled: false"
       gesture-detector
       raycaster="objects: .clickable"
-      cursor="fuse: false; rayOrigin: mouse"> <a-entity
+      cursor="fuse: false; rayOrigin: mouse">
+        
+    <a-entity
       id="shark"
       gltf-model="#shark-model" 
       class="clickable"
       scale="5 5 5" 
       gesture-handler
+      gesture-handler="minScale: 1; maxScale: 50"
     　animation="property: position; 
                  from: -10 30 -200;  /* バルーンより50先（前）からスタート */
                  to: -10 30 400;     /* ゴールも50先に設定 */
@@ -51,6 +54,7 @@
       class="clickable"
       scale="0.03 0.03 0.03" 
       gesture-handler
+      gesture-handler="minScale: 0.001; maxScale: 0.1"
       position="10 20 -250"
     　animation="property: position; 
                  from: 10 20 -250;   /* サメより50後ろからスタート */
