--- a/AR_anime1.html
+++ b/AR_anime1.html
@@ -25,8 +25,8 @@
         </a-mixin>
       </a-assets>
       
-    <a-entity
-    　embedded 
+    <a-scene 
+      embedded 
       arjs="sourceType: webcam; debugUIEnabled: false;" 
       vr-mode-ui="enabled: false"
       gesture-detector
@@ -37,7 +37,7 @@
       id="shark"
       gltf-model="#shark-model" 
       class="clickable"
-      scale="5 5 5" 
+      scale="1 1 1" 
       gesture-handler
       gesture-handler="minScale: 1; maxScale: 50"
     　animation="property: position; 
