--- a/AR_anime1.html
+++ b/AR_anime1.html
@@ -37,23 +37,31 @@
       id="shark"
       gltf-model="#shark-model" 
       class="clickable"
-      scale="1 1 1" 
-      animation-mixer
+      scale="10 10 10" 
       gesture-handler
-      animation="property: position; from: -5 15 -30; to: -5 15 30; dur: 10000; easing: linear; loop: true; autoplay: true">
-    </a-entity>
+      animation="property: position; 
+                 from: -10 30 -200;  /* バルーンより50先（前）からスタート */
+                 to: -10 30 400;     /* ゴールも50先に設定 */
+                 dur: 60000; 
+                 easing: linear; 
+                 loop: true;
+                 delay: 0"> </a-entity>
     
     <a-entity 
       id="balloon"
       gltf-model="#balloon-model" 
       class="clickable"
-      scale="0.01 0.01 0.01"
-      animation-mixer
+      scale="0.02 0.02 0.02" 
       gesture-handler
-      animation="property: position; from: 5 10 -40; to: 5 10 20; dur: 10000; easing: linear; loop: true; autoplay: true">
-    </a-entity>
+      animation="property: position; 
+                 from: 10 20 -250;   /* サメより50後ろからスタート */
+                 to: 10 20 350;      /* ゴール */
+                 dur: 60000;         /* サメと同じ速度 */
+                 easing: linear; 
+                 loop: true; 
+                 delay: 0"> </a-entity>
                 
-      <a-camera gps-camera rotation-reader></a-camera>
+    <a-camera gps-camera rotation-reader></a-camera>
     </a-scene>
 
     <div id="overlay" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.7); color: white; display: flex; flex-direction: column; justify-content: center; align-items: center; z-index: 9999;">
