--- a/AR_anime1.html
+++ b/AR_anime1.html
@@ -21,6 +21,12 @@
       <a-assets>
         <a-asset-item id="shark-model" src="./whale_shark_fantasy.glb"></a-asset-item>
         <a-asset-item id="balloon-model" src="./peachy_balloon_gift-v1.glb"></a-asset-item>
+          
+          <a-mixin id="sparkle" 
+            geometry="primitive: sphere; radius: 0.1" 
+            material="color: #00ff88; shader: flat; emissive: #00ff88; emissiveIntensity: 2"
+            animation__blink="property: scale; from: 0 0 0; to: 1 1 1; dur: 1000; loop: true; dir: alternate; easing: easeInOutSine">
+          </a-mixin>
       </a-assets>
 
       <a-entity 
@@ -37,6 +43,10 @@
                    easing: linear; 
                    loop: true;
                    autoplay: true">
+      <a-entity mixin="sparkle" position="1 0.5 0"></a-entity>
+      <a-entity mixin="sparkle" position="-1 -0.5 1" animation__blink="delay: 200"></a-entity>
+      <a-entity mixin="sparkle" position="0.5 1 -1" animation__blink="delay: 400"></a-entity>
+      <a-entity mixin="sparkle" position="-0.5 -1 -0.5" animation__blink="delay: 600"></a-entity>    
       </a-entity>
     
       <a-entity 
@@ -53,6 +63,9 @@
                    easing: linear; 
                    loop: true; 
                    autoplay: true">
+      <a-entity mixin="sparkle" position="0 -10 0" scale="50 50 50"></a-entity>
+      <a-entity mixin="sparkle" position="5 -15 5" scale="40 40 40" animation__blink="delay: 300"></a-entity>
+      <a-entity mixin="sparkle" position="-5 -15 -5" scale="40 40 40" animation__blink="delay: 500"></a-entity>    
       </a-entity>
     <a-camera gps-camera rotation-reader></a-camera>
     </a-scene>
