--- a/AR_anime1.html
+++ b/AR_anime1.html
@@ -5,6 +5,7 @@
     <title>AR Sky Parade</title>
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
+    <script src="https://unpkg.com/aframe-particle-system-component@1.1.3/dist/aframe-particle-system-component.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
     <script src="https://raw.githack.com/fcor/arjs-gestures/master/dist/gestures.js"></script>
 </head>
@@ -63,9 +64,20 @@
                    easing: linear; 
                    loop: true; 
                    autoplay: true">
-      <a-entity mixin="sparkle" position="0 -10 0" scale="50 50 50"></a-entity>
-      <a-entity mixin="sparkle" position="5 -15 5" scale="40 40 40" animation__blink="delay: 300"></a-entity>
-      <a-entity mixin="sparkle" position="-5 -15 -5" scale="40 40 40" animation__blink="delay: 500"></a-entity>    
+      <a-entity 
+        position="0 0 0" 
+        particle-system="
+          color: #009a49, #ffffff; 
+          size: 1; 
+          particleCount: 500; 
+          velocityValue: 0 2 0; 
+          velocitySpread: 1 1 1; 
+          accelerationValue: 0 -1 0; 
+          maxAge: 3; 
+          texture: https://cdn.rawgit.com/Alveere/aframe-particle-system-component/master/dist/images/smokeparticle.png;
+          blending: 1">
+      </a-entity>
+      
       </a-entity>
     <a-camera gps-camera rotation-reader></a-camera>
     </a-scene>
