--- a/AR_anime1.html
+++ b/AR_anime1.html
@@ -44,11 +44,13 @@
                    easing: linear; 
                    loop: true;
                    autoplay: true">
-      <a-entity mixin="sparkle" position="1 0.5 0"></a-entity>
-      <a-entity mixin="sparkle" position="-1 -0.5 1" animation__blink="delay: 200"></a-entity>
-      <a-entity mixin="sparkle" position="0.5 1 -1" animation__blink="delay: 400"></a-entity>
-      <a-entity mixin="sparkle" position="-0.5 -1 -0.5" animation__blink="delay: 600"></a-entity>    
-      </a-entity>
+          
+      <a-entity mixin="sparkle" position="0 -5 0"></a-entity>
+      <a-entity mixin="sparkle" position="2 -8 2" animation__blink="delay: 100"></a-entity>
+      <a-entity mixin="sparkle" position="-2 -10 -2" animation__blink="delay: 300"></a-entity>
+      <a-entity mixin="sparkle" position="1 -12 -1" animation__blink="delay: 500"></a-entity>
+      <a-entity mixin="sparkle" position="-1 -15 1" animation__blink="delay: 700"></a-entity>  
+      <a-entity mixin="sparkle" position="0 -20 0" scale="0.5 0.5 0.5"></a-entity>
     
       <a-entity 
         id="balloon"
