--- a/AR_anime1.html
+++ b/AR_anime1.html
@@ -49,6 +49,7 @@
             <a-entity mixin="sparkle" position="-1 -0.5 1" animation__blink="delay: 200"></a-entity>
             <a-entity mixin="sparkle" position="0.5 1 -1" animation__blink="delay: 400"></a-entity>
             <a-entity mixin="sparkle" position="-0.5 -1 -0.5" animation__blink="delay: 600"></a-entity>
+        </a-entity>
         
         <a-entity 
         id="balloon"
